Details
-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
-
29f829183b28b950c0396c26d7d50a03353796de (qt/qtmultimedia/dev) 3ab23fe9daec468fe90ec59971910a0ec8e65686 (qt/qtmultimedia/6.2)
Description
Steps to reproduce:
1. Run recorder example on Android device
2. Switch to different app
3. Return to recorder example
Actual:
App crashed once user want to record video
Expected:
App should work without any issues
Attachments
Issue Links
- is duplicated by
-
QTBUG-96751 User cannot play video once returned from the background for player example
-
- Closed
-
-
QTBUG-96753 When camera example was put in the background once it returned can’t be used anymore
-
- Closed
-
- resulted from
-
QTBUG-93460 Test Android Examples
-
- Closed
-