Fix recorder example crash while switching between apps

The onApplicationStateChanged m_state was being changed on setActive
rewriting the state that was supposed to save

Fixes: QTBUG-96944
Pick-to: 6.2
Change-Id: Ic90297bd0962fecd6a420ef6e84164b1df1a3bce
Reviewed-by: Lars Knoll <lars.knoll@qt.io>